--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
   color: black;
 }
 
-.center {
+/* .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -24,6 +24,7 @@ div.aboutMe {
 div.socials {
   text-align: center;
 }
+*/
 
 form {
   text-align: center;
@@ -39,4 +40,10 @@ div.lightModeButt{
   top: 0;
   right: 0;
   padding: 10px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
 }
