--- a/index.css
+++ b/index.css
@@ -12,8 +12,9 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
+} */
 
+/* 
 div.aboutMe {
   a {
     color: rgb(0, 90, 255);
@@ -21,14 +22,15 @@ div.aboutMe {
   text-align: center;
 }
 
+
 div.socials {
   text-align: center;
 }
-*/
+
 
 form {
   text-align: center;
-}
+} */
 
 .submit {
   height: 50px;
@@ -42,8 +44,19 @@ div.lightModeButt{
   padding: 10px;
 }
 
+.center {
+  max-width: 40%;
+  height: 40%;
+}
+
+/* form {
+  max-width: 100%;
+} */
+
 .container {
   display: flex;
   flex-direction: column;
   justify-content: baseline;
+  align-items: center;
+  text-align: center;
 }
