--- a/index.css
+++ b/index.css
@@ -22,14 +22,14 @@ div.socials {
 
 .submit {
   height: 50px;
-  width: 150%;
+  width: 100%; /* Adjusted to fit within the container */
   max-width: 500px;
   box-sizing: border-box;
   margin-bottom: 5px;
   cursor: pointer;
 }
 
-div.lightModeButt{
+div.lightModeButt {
   position: absolute;
   top: 0;
   right: 0;
@@ -40,35 +40,35 @@ div.lightModeButt{
   cursor: pointer; 
 }
 
-#about{
+#about {
   padding: 80px 0;
 }
 
-.row{
+.row {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-.aboutCol1{
+.aboutCol1 {
   flex-basis: 30%;
   text-align: center;
 }
 
-.aboutCol1 img{
+.aboutCol1 img {
   margin-top: 80px;
 }
 
-.aboutCol1 span img{
+.aboutCol1 span img {
   border-radius: 15px;
   margin-top: 0px;
 }
 
-.aboutCol2{
+.aboutCol2 {
   flex-basis: 35%;
 }
 
-.subTitle{
+.subTitle {
   margin-top: 5px;
   font-size: 60px;
   font-weight: 600;
@@ -80,20 +80,20 @@ div.lightModeButt{
   text-align: left;
 }
 
-.tabTitles{
+.tabTitles {
   display: flex;
   margin: 20px 0 40px;
 }
 
-.tabLinks{
+.tabLinks {
   margin-right: 50px;
-  font-size: 18x;
+  font-size: 18px;
   font-weight: 500;
   cursor: pointer;
   position: relative;
 }
 
-.tabLinks::after{
+.tabLinks::after {
   content: '';
   width: 0;
   height: 3px;
@@ -104,46 +104,46 @@ div.lightModeButt{
   transition: 0.5s;
 }
 
-.tabLinks.activeLink::after{
+.tabLinks.activeLink::after {
   width: 50%;
 }
 
-.tabContents ul{
+.tabContents ul {
   padding-left: 0px;
   font-size: 18px;
 }
 
-.tabContents ul li{
+.tabContents ul li {
   list-style: none;
   margin-bottom: 10px;
   font-weight: 500;
 }
 
-.tabContents ul li span{
+.tabContents ul li span {
   color: #66ccff;
   font-size: 20px;
   font-weight: 800;
 }
 
-.tabContents ul li time{
+.tabContents ul li time {
   font-size: 15px;
   font-weight: 10;
 }
 
-.tabContents{
+.tabContents {
   display: none;
 }
 
-.tabContents.activeTab{
+.tabContents.activeTab {
   display: block;
 }
 
-.contactCol{
+.contactCol {
   flex-basis: 30%;
 }
 
 .inputField {
-  width: 150%;
+  width: 100%; /* Adjusted to fit within the container */
   max-width: 500px;
   box-sizing: border-box;
   margin-bottom: 5px;
